fix the scroll arrow on mobile

--- a/static/style_test.css
+++ b/static/style_test.css
@@ -992,11 +992,13 @@ body {
 		position: absolute;
 		margin-top: 80vh;
 		transform: translateX(-35px);
+		/*display: none;*/
 	}
 
 	.scroll-arrow {
-		padding-top: 87vh;
+		padding-top: 15vh;
 		opacity: 1;
+		/*background-color: red;*/
 		animation: none;
 		-moz-animation: none; /* Firefox */
 		-webkit-animation: none; /* Safari and Chrome */
@@ -1009,8 +1011,8 @@ body {
 		animation:opacp 1s;
 		-moz-animation:opacp 1s; 
 		-webkit-animation:opacp 1s; 
-		-webkit-animation-delay: 1s;
-		animation-delay: 1s;
+		-webkit-animation-delay: 0.8s;
+		animation-delay: 0.8s;
 		-webkit-animation-fill-mode: forwards;
 	}
 
